xmloff/source/core/xmlimp.cxx
@@ -1490,7 +1490,6 @@ XMLEventImportHelper& SvXMLImport::GetEventImport()
 void SvXMLImport::SetFontDecls( XMLFontStylesContext *pFontDecls )
 {
     mxFontDecls = pFontDecls;
-    GetTextImport()->SetFontDecls( pFontDecls );
 }
 
 void SvXMLImport::SetStyles( SvXMLStylesContext *pStyles )
